Revert "fix button alignment issues on narrow screens"
This reverts commit 05763f079a6c3394e65b11fbfd793e5de7e9c3d4.

--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@
 }
 
 .nav-button {
-    display: inline-grid;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     color: white;
@@ -128,10 +128,7 @@
     width: 180px;
     padding-top: 15px;
     padding-bottom: 15px;
-
-
     transition: background .5s;
-
 }
 
 .nav-button:hover {
